
plugins {
    id "io.github.ddimtirov.codacy" version "0.1.0"
}

apply plugin: 'java'
apply plugin: 'maven-publish'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: "jacoco"
apply from:   'checkerframework.gradle'


group = 'uk.ac.ebi.ena.webin-cli'
ext.version_base = '1.5.4'
version = version_base
sourceCompatibility = '1.8'
targetCompatibility = '1.8'

ext.webinCliCodacyProjectToken =  file(hasProperty('sshKeyFile') ? sshKeyFile : "${System.properties['user.home']}/.ssh/id_dsa")

repositories {
    flatDir { dirs 'lib' }
    mavenLocal()
    maven { url "http://ena-dev:8081/artifactory/all" }
}

configurations.all {
	
	if( !hasProperty( 'artifactoryUsername' ) )
		project.ext.properties.artifactoryUsername = ''
	else
		project.ext.properties.artifactoryUsername = artifactoryUsername;
		
	if( !hasProperty( 'artifactoryPassword' ) )
		project.ext.properties.artifactoryPassword = ''
	else
	 	project.ext.properties.artifactoryPassword = artifactoryPassword;
}


test {
	jvmArgs "-Dfile.encoding=UTF-8"
	maxHeapSize = '4G'

	if( System.env.webin_cli_password ) {
      	environment 'webin-cli-password', System.env.webin_cli_password
    } else {
    	environment 'webin-cli-password', webinCliPassword
    }

	if( System.env.webin_cli_username ) {
      	environment 'webin-cli-username', System.env.webin_cli_username
    } else {
    	environment 'webin-cli-username', webinCliUsername
    }
}


task printWebinTestCredentials {
    doLast {
        println 'webinCliUsername: ' + webinCliUsername
        println 'webinCliPassword: ' + webinCliPassword
    }
}


jar {
    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
        exclude("**/*.RSA")
        exclude("**/*.SF")
        
        configurations.runtime.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    manifest {
        attributes 'Implementation-Title': 'webin-cli',
                'Implementation-Version': version_base,
                'Built-By': System.getProperty('user.name'),
                'Built-Date': new Date(),
                "Main-Class": 'uk.ac.ebi.ena.webin.cli.WebinCli'
    }
}


dependencies {
    compile 'org.apache.commons:commons-lang3:3.0'
    compile 'org.apache.commons:commons-compress:1.10'
    compile("commons-net:commons-net:3.4")
    compile group: 'com.beust', name: 'jcommander', version: '1.72'
    compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
    compile(group: 'com.oracle', name: 'ojdbc6', version: '11.2.0.3')
    compile(group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.1')
    compile 'org.apache.commons:commons-lang3:3.0'
    compile 'org.apache.commons:commons-compress:1.10'
    compile group: 'com.beust', name: 'jcommander', version: '1.72'
    compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
    compile(group: 'com.oracle', name: 'ojdbc6', version: '11.2.0.3')
    compile(group: 'uk.ac.ebi.ena.sequence', name: 'embl-api-ff', version: '1.1.286')
    compile(group: 'uk.ac.ebi.ena.sequence', name: 'embl-api-core', version: '1.1.286')
    compile(group: 'uk.ac.ebi.ena.sequence', name: 'embl-api-validator', version: '1.1.286')
    compile(group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.1')
    compile("com.googlecode.json-simple:json-simple:1.1.1")
  //  compile(group: 'uk.ac.ebi.ena-template-expansion', name: 'ena-template-expansion', version: '1.0.4')
    compile("org.jdom:jdom:2.0.2")
    compile( group: 'uk.ac.ebi', name: 'ena-fastq-validator', version: '1.1.1' )
    compile( group: 'uk.ac.ebi.ena', name: 'ena-cram-processing-tools', version: '1.1.0' ); 
    compile( group: 'com.github.samtools', name: 'htsjdk', version: '2.15.0' )
    compile( group: 'com.google.guava', name: 'guava', version: '26.0-jre' )
    testCompile 'junit:junit:4.11'
}


configurations.all {
    resolutionStrategy {
      force "commons-net:commons-net:3.4"
    }
}

task sourceJar(type: Jar) { 
	from sourceSets.main.allJava 
	
}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifact sourceJar { classifier "sources" }
        }
    }
    repositories {
        maven {
            credentials {
                username project.ext.properties.artifactoryUsername
                password project.ext.properties.artifactoryPassword
            }
            url "http://ena-dev:8081/artifactory/libs-release-local"
        }
    }
}



codacy {
    // Codacy project token https://support.codacy.com/hc/en-us/articles/207279819-Coverage
    // projectToken = webinCliCodacyProjectToken
}
